[tool.poetry]
name = "intensive"
version = "0.1.0"
description = ""
authors = ["OksanaPugacheva <oksana.pugacheva.98@gmail.com>"]
readme = "README.md"
packages = [{include = "cafe_api"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.100.0"
uvicorn = {extras = ["standard"], version = "^0.23.1"}
sqlalchemy = "^2.0.19"
psycopg2 = "^2.9.6"


[tool.poetry.scripts]
start = "cafe_api.main:start_uvicorn"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
